ajouter support geolocalisation + qq chgmts mineurs

--- a/Code/pages/Commander.html
+++ b/Code/pages/Commander.html
@@ -26,6 +26,7 @@
                 <li><a href="./RechercheBieres.html">Recherche bière</a></li>
                 <li><a href="./PDV.html">Trouver un point de vente de bière</a></li>
                 <li class="active"><a href="#">Commander une bière</a></li>
+                <li><a href="./contact.html">Contact</a></li>
               </ul>
               <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./Login.html'">Se connecter</button>
               <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./SignIn.html'">S'inscrire</button>
