--- a/Code/pages/RechercheBieres.html
+++ b/Code/pages/RechercheBieres.html
@@ -26,6 +26,7 @@
               <li class="active"><a href="#">Recherche bière</a></li>
               <li><a href="./PDV.html">Trouver un point de vente de bière</a></li>
               <li><a href="./Commander.html">Commander une bière</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
             <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./Login.html'">Se connecter</button>
             <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./SignIn.html'">S'inscrire</button>
