ajout des pages HTML dans le serveur et fix le css dans les pages

--- a/Code/pages/index.html
+++ b/Code/pages/index.html
@@ -7,8 +7,8 @@
         <meta name="author" content="François Duchêne">
         <meta name="description" content="Catalogue complet de bières permettant de localiser des point de vente et de commander en ligne !">
         <title>BeerSearch</title>
-        <link href="css/bootstrap.css" rel="stylesheet" />
-        <link href="css/style.css" rel="stylesheet"/>
+        <link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
+        <link href="css/style.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
