--- a/Code/pages/contact.html
+++ b/Code/pages/contact.html
@@ -28,11 +28,11 @@
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="#">Accueil</a></li>
+              <li><a href="./index.html">Accueil</a></li>
               <li><a href="./RechercheBieres.html">Recherche bière</a></li>
               <li><a href="./PDV.html">Trouver un point de vente de bière</a></li>
               <li><a href="./Commander.html">Commander une bière</a></li>
-              <li class="active"><a href="./contact.html">Contact</a></li>
+              <li class="active"><a href="#">Contact</a></li>
             </ul>
             <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./Login.html'">Se connecter</button>
             <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./SignIn.html'">S'inscrire</button>
