fonction de recherche presque finie

--- a/Code/pages/RechercheBieres.html
+++ b/Code/pages/RechercheBieres.html
@@ -42,10 +42,10 @@
       </div>
     </header>
     <section>
-      <form method="post" class="form-search" id="boutonRechercher">
+      <form method="post" class="form-search" action="/search" id="boutonRechercher">
         <div class="input-append">
           <script src="js/recherche.js"></script>
-          <input type="search" id="inputSearch" class="span2 search-query" placeholder="Rechercher.." onsearch="al()"/>
+          <input type="search" id="inputSearch" name="nomBiere"  class="span2 search-query" placeholder="Rechercher.." onsearch="al()"/>
           <button type="submit" class="btn" onclick="al()">
             <i class="glyphicon glyphicon-search" aria-hidden="true"></i>
           </button>
