--- a/Code/pages/contact.html
+++ b/Code/pages/contact.html
@@ -28,9 +28,8 @@
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="./index.html">Accueil</a></li>
               <li><a href="./RechercheBieres.html">Recherche bière</a></li>
-              <li><a href="./PDV.html">Trouver un point de vente de bière</a></li>
+              <li><a href="./PDV.html">Points de ventes</a></li>
               <li><a href="./Commander.html">Commander une bière</a></li>
               <li class="active"><a href="#">Contact</a></li>
             </ul>
