--- a/Code/pages/PDV.html
+++ b/Code/pages/PDV.html
@@ -25,9 +25,8 @@
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="./index.html">Accueil</a></li>
               <li><a href="./RechercheBieres.html">Recherche bière</a></li>
-              <li class="active"><a href="#">Trouver un point de vente de bière</a></li>
+              <li class="active"><a href="#">Points de ventes</a></li>
               <li><a href="./Commander.html">Commander une bière</a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -39,7 +38,7 @@
       <header>
         <div class="container">
           <div class="starter-template">
-            <h1>Trouvez un point de vente !</h1>
+            <h1>Trouvez un point de vente à proximité !</h1>
           </div>
         </div>
       </header>
