--- a/Code/pages/RechercheBieres.html
+++ b/Code/pages/RechercheBieres.html
@@ -22,9 +22,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="./index.html">Accueil</a></li>
             <li class="active"><a href="#">Recherche bière</a></li>
-            <li><a href="./PDV.html">Trouver un point de vente de bière</a></li>
+            <li><a href="./PDV.html">Points de ventes</a></li>
             <li><a href="./Commander.html">Commander une bière</a></li>
             <li><a href="./contact.html">Contact</a></li>
           </ul>
