--- a/Code/pages/index.html
+++ b/Code/pages/index.html
@@ -24,9 +24,8 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Accueil</a></li>
                 <li><a href="./RechercheBieres.html">Recherche bière</a></li>
-                <li><a href="./PDV.html">Trouver un point de vente de bière</a></li>
+                <li><a href="./PDV.html">Points de ventes</a></li>
                 <li><a href="./Commander.html">Commander une bière</a></li>
                 <li><a href="./contact.html">Contact</a></li>
               </ul>
