--- a/Code/pages/Commander.html
+++ b/Code/pages/Commander.html
@@ -36,7 +36,7 @@
         <header>
           <div class="container">
             <div class="starter-template">
-              <h1>Commander des Maintenant</h1>
+              <h1>Commander dès maintenant</h1>
             </div>
           </div>
         </header>
@@ -50,30 +50,107 @@
         </div>
         <table>
           <tr>
-            <th> Bière    </th>
+            <th> Bière </th>
             <th> Caractéristiques </th>
             <th> Points de vente </th>
             <th> Commander </th>
           </tr>
           <tr>
-            <td> Chimey </td>
-            <td> youpi </td>
-            <td> youpi </td>
-            <td> youpi </td>
+            <td> Chimey Bleue </td>
+            <td>
+               brune, 9 %, laisse un leger goût de caramel en bouche
+            </td>
+            <td> Au moine fou </td>
+            <td>
+              <label for="type">Nombre de bouteilles </label>
+              <select name="type" id="type">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <td> Chimey Bleue </td>
+            <td>
+               brune, 9 %, laisse un leger goût de caramel en bouche
+            </td>
+            <td> Jamais 203 </td>
+            <td>
+              <label for="type">Nombre de bouteilles </label>
+              <select name="type" id="type">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+              </select>
+            </td>
           </tr>
           <tr>
             <td> Orval </td>
-            <td> youpi </td>
-            <td> personne </td>
-            <td> youpi </td>
+            <td>
+               Ambrée, 6.2 %, amère
+            </td>
+            <td> Personne </td>
+            <td>
+              <label for="type">Nombre de bouteilles </label>
+              <select name="type" id="type">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+              </select>
+            </td>
           </tr>
           <tr>
             <td> Orange Pied'boeuf </td>
-            <td> youpi </td>
-            <td> gaston Lagaffe </td>
-            <td> youpi </td>
+            <td>
+                blonde, 1,2 %, classique
+            </td>
+            <td> Chez Lagaffe </td>
+            <td>
+              <label for="type">Nombre de bouteilles </label>
+              <select name="type" id="type">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+              </select>
+            </td>
           </tr>
         </table>
+        <div class="comm">
+        <button type="button" class="btn btn-default navbar-btn">Commander</button>
+        </div>
         <footer class="footer">
           <div class="container">
             <p class="text-muted">Site créé dans le cadre du cours LSINF1212</p>
