ajout recherche par province

--- a/Code/pages/RechercheBieres.html
+++ b/Code/pages/RechercheBieres.html
@@ -82,6 +82,21 @@
           <option value="6et8">Entre 6 et 8</option>
           <option value="plus8">Plus de 8</option>
         </select>
+        <label for="province">Province</label>
+        <select name="province" id="province">
+          <option value="Tout">Tout</option>
+          <option value="Luxembourg">Luxembourg</option>
+          <option value="Namur">Namur</option>
+          <option value="Liège">Liège</option>
+          <option value="Hainaut">Hainaut</option>
+          <option value="Bruxelles">Bruxelles</option>
+          <option value="Brabant flamand">Brabant flamand</option>
+          <option value="Brabant wallon">Brabant wallon</option>
+          <option value="Flandre-Occidentale">Flandre-Occidentale</option>
+          <option value="Flande-Orientale">Flande-Orientale</option>
+          <option value="Limbourg">Limbourg</option>
+          <option value="Anvers">Anvers</option>
+        </select>
       </form>
     </section>
     <section class="container">
