--- a/Code/pages/contact.html
+++ b/Code/pages/contact.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="Biere, Bière, rechercher, commander, alchool">
         <meta name="author" content="François Duchêne">
         <meta name="description" content="Catalogue complet de bières permettant de localiser des point de vente et de commander en ligne !">
-        <title>BeerSearch</title>
+        <title>BeerSearch - Contact</title>
         <link href="css/bootstrap.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet"/>
     </head>
