--- a/Code/pages/index.html
+++ b/Code/pages/index.html
@@ -37,8 +37,8 @@
         <header>
           <div class="container">
             <div class="starter-template">
-              <h1>BeerSearch</h1>
-              <p>C'est la page d'accueil</p>
+              <h1>Belgian BeerSearch</h1>
+              <h4>Ici trouvez toutes vos bières belges préférées !</h4>
               <img class="img-responsive img-circle margin" src="res/Trappist_Beer.jpg" style="display:inline" alt="Bieres" width="1920" height="740">
             </div>
           </div>
