--- a/Code/pages/Commander.html
+++ b/Code/pages/Commander.html
@@ -7,7 +7,6 @@
         <title>BeerSearch - Commander</title>
         <link href="css/bootstrap.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet"/>
-        <link href="css/tab.css" rel="stylesheet"/>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -40,19 +39,12 @@
             </div>
           </div>
         </header>
-        <div class="recherche_p">
-
-          <form action="/search" id="searchthis" method="get">
-            <input id="search" name="q" type="text" placeholder="Rechercher" />
-            <input id="search-btn" type="submit" value="Rechercher" />
-          </form>
-
-        </div>
-        <table>
+        <table class="table table-striped table-hover">
           <tr>
             <th> Bière </th>
             <th> Caractéristiques </th>
             <th> Points de vente </th>
+            <th> Prix </th>
             <th> Commander </th>
           </tr>
           <tr>
@@ -61,6 +53,7 @@
                brune, 9 %, laisse un leger goût de caramel en bouche
             </td>
             <td> Au moine fou </td>
+            <td>3€</td>
             <td>
               <label for="type">Nombre de bouteilles </label>
               <select name="type" id="type">
@@ -84,6 +77,7 @@
                brune, 9 %, laisse un leger goût de caramel en bouche
             </td>
             <td> Jamais 203 </td>
+            <td>2,5€</td>
             <td>
               <label for="type">Nombre de bouteilles </label>
               <select name="type" id="type">
@@ -106,7 +100,8 @@
             <td>
                Ambrée, 6.2 %, amère
             </td>
-            <td> Personne </td>
+            <td> Beer Bar </td>
+            <td>1,25€</td>
             <td>
               <label for="type">Nombre de bouteilles </label>
               <select name="type" id="type">
@@ -130,6 +125,7 @@
                 blonde, 1,2 %, classique
             </td>
             <td> Chez Lagaffe </td>
+            <td>1,75€</td>
             <td>
               <label for="type">Nombre de bouteilles </label>
               <select name="type" id="type">
@@ -149,8 +145,16 @@
           </tr>
         </table>
         <div class="comm">
-        <button type="button" class="btn btn-default navbar-btn">Commander</button>
+          <script>
+            function commandeEff() {
+              document.getElementById("comm").innerHTML = "Commande envoyée !!";
+            }
+          </script>
+        <button type="button" class="btn btn-default navbar-btn" onclick="commandeEff()" >Commander</button>
         </div>
+        <section class="container">
+          <h3 id="comm"></h3>
+        </section>
         <footer class="footer">
           <div class="container">
             <p class="text-muted">Site créé dans le cadre du cours LSINF1212</p>
